--- a/videoconditioner.qsf
+++ b/videoconditioner.qsf
@@ -263,4 +263,5 @@ set_global_assignment -name VHDL_FILE src/fir/filter/auk_dspip_avalon_streaming_
 set_global_assignment -name VERILOG_FILE src/fir/filter/altera_avalon_sc_fifo.v
 set_global_assignment -name VERILOG_FILE src/fir/filter.v
 set_global_assignment -name VERILOG_FILE src/seg7/SEG7_LUT.v
+set_global_assignment -name VERILOG_FILE iverilog/syncdetect.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
