6-bit dec with ROM table vector-06c like sync:   shortening hsync pulses   very long (23 lines long) sync pulse

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,15 @@ iverilog/a
 *.out
 *.vcd
 iverilog/*.out
+
+*.pyc
+
+dac/dac.txt
+
+hw/$de1-vga-out.sch
+
+hw/de1-vga-out-cache.lib
+
+hw/de1-vga-out.sch
+
+hw/de1-vga-out.svg
