--- a/videoconditioner.qsf
+++ b/videoconditioner.qsf
@@ -240,11 +240,12 @@ set_global_assignment -name OPTIMIZE_HOLD_TIMING "IO PATHS AND MINIMUM TPD PATHS
 set_global_assignment -name OPTIMIZE_MULTI_CORNER_TIMING ON
 set_global_assignment -name OPTIMIZE_POWER_DURING_FITTING "EXTRA EFFORT"
 set_global_assignment -name FITTER_EFFORT "STANDARD FIT"
-set_instance_assignment -name GLOBAL_SIGNAL "GLOBAL CLOCK" -to clkx
 set_instance_assignment -name VIRTUAL_PIN ON -to "sample_pin[6:0]"
 set_instance_assignment -name VIRTUAL_PIN ON -to "blacklevel_pin[5:0]"
-set_global_assignment -name SLD_FILE "D:/users/svo/projects/videoconditioner/stp1_auto_stripped.stp"
 set_global_assignment -name VERILOG_FILE src/top.v
+set_global_assignment -name VERILOG_FILE src/video.v
+set_global_assignment -name VERILOG_FILE src/ayclkdrv.v
+set_global_assignment -name VERILOG_FILE src/adc.v
 set_global_assignment -name QIP_FILE src/pll.qip
 set_global_assignment -name SIGNALTAP_FILE stp1.stp
 set_global_assignment -name QIP_FILE src/outpll.qip
@@ -266,4 +267,7 @@ set_global_assignment -name VERILOG_FILE src/seg7/SEG7_LUT.v
 set_global_assignment -name VERILOG_FILE iverilog/syncdetect.v
 set_global_assignment -name QIP_FILE src/sintable.qip
 set_global_assignment -name QIP_FILE src/dac/dactable.qip
+set_instance_assignment -name GLOBAL_SIGNAL "GLOBAL CLOCK" -to clkpalFSC
+set_instance_assignment -name SYNTH_GATED_CLOCK_CONVERSION ON -to clkpalFSC
+set_global_assignment -name SLD_FILE "D:/users/svo/projects/videoconditioner/stp1_auto_stripped.stp"
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
